@@ -21,6 +21,24 @@ class RemoteTnsTest < Test::Unit::TestCase
     assert_equal "Succeeded", response.message
   end
 
+  def test_successful_purchase_sans_options
+    assert response = @gateway.purchase(@amount, @credit_card)
+    assert_success response
+    assert_equal "Succeeded", response.message
+  end
+
+  def test_successful_purchase_with_more_options
+    more_options = @options.merge({
+      ip: "127.0.0.1",
+      email: "joe@example.com",
+    })
+
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(more_options))
+    assert_success response
+    assert_equal "Succeeded", response.message
+  end
+
+
   def test_failed_purchase
     assert response = @gateway.purchase(@amount, @declined_card, @options)
     assert_failure response
