@@ -47,6 +47,7 @@
 * CardStream: Fix signature calculation [duff]
 * CyberSource: Update test and live URL [marquisong]
 * AuthorizeNet: Truncate nameOnAccount field [duff]
+* Tns: Fix ipAddress field [duff]
 
 
 == Version 1.58.0 (March 1, 2016)
